--- a/LPW_FT-NIRS.Rmd
+++ b/LPW_FT-NIRS.Rmd
@@ -49,7 +49,7 @@ The Bruker MPA outputs FT-NIRS spectra in a .0 format.  Prior to loading spectra
 All file names in a folder can be generated with list.files().  For pulling file names to create a new .csv, you can use:
 
 
-```{r, results = 'hide', cache = T, collapse = T}
+```{r, results = 'hide', cache = T, collapse = T, eval = F, include = F}
 cat(list.files(path = "LPW_scans/", ), "\n") # concatenates all filenames in a directory and adds a space delimiter
 ```
 This output (without index numbers in square brackets) can be copied and pasted into Excel, then converted into columns using the "Data -> Text to Columns" function and selecting a "space" delimiter.  These columns can then be transposed into a "filename" column.  
@@ -188,17 +188,17 @@ ggplot(dfmeta_longLPW) + geom_path(aes(x = wavenumber, y = value,
   theme(legend.position = "none") +
   scale_color_viridis(discrete = T)
 # appears to be slightly different  values for each scan, look at 1 & 2 first
-ggplot(dfmeta_longLPW %>% filter(run_number != 3)) + geom_path(aes(x = wavenumber, y = value, color = run_number, group = file_name)) + 
+ggplot(dfmeta_longLPW[dfmeta_longLPW$run_number %in% c(1,2),]) + geom_path(aes(x = wavenumber, y = value, color = run_number, group = file_name)) + 
   labs(y = "Absorbance units", x = expression(paste("Wavenumber ", cm^-1))) +
   theme(legend.position = "none") +
   scale_color_viridis(discrete = T)
 # clearly different, now 1 & 3
-ggplot(dfmeta_longLPW %>% filter(run_number != 2)) + geom_path(aes(x = wavenumber, y = value, color = run_number, group = file_name)) + 
+ggplot(dfmeta_longLPW[dfmeta_longLPW$run_number %in% c(1,3),]) + geom_path(aes(x = wavenumber, y = value, color = run_number, group = file_name)) + 
   labs(y = "Absorbance units", x = expression(paste("Wavenumber ", cm^-1))) +
   theme(legend.position = "none") +
   scale_color_viridis(discrete = T)
 # also different, finally 2 & 3
-ggplot(dfmeta_longLPW %>% filter(run_number != 1)) + geom_path(aes(x = wavenumber, y = value, color = run_number, group = file_name)) + 
+ggplot(dfmeta_longLPW[dfmeta_longLPW$run_number %in% c(2,3),]) + geom_path(aes(x = wavenumber, y = value, color = run_number, group = file_name)) + 
   labs(y = "Absorbance units", x = expression(paste("Wavenumber ", cm^-1))) +
   theme(legend.position = "none") +
   scale_color_viridis(discrete = T)
@@ -223,14 +223,13 @@ ggplot(dfmeta_LPW) +
 
 # Combining/averaging LPW FT-NRIS scans 2 & 3
 ```{r, cache = T}
-scan_2 <- dfmeta_LPW %>% filter(run_number == 2)
+scan_2 <- dfmeta_LPW %>% dplyr::filter(run_number == 2)
 # scan_2_long <- pivot_longer(scan_2, cols = `11536`:`3952`, names_to = "name", values_to = "value")
 # scan_2_long$name <- as.numeric(scan_2_long$name)
-scan_3 <- dfmeta_LPW %>% filter(run_number == 3)
+scan_3 <- dfmeta_LPW %>% dplyr::filter(run_number == 3)
 # scan_3_long <- pivot_longer(scan_3, cols = `11536`:`3952`, names_to = "name", values_to = "value")
 # scan_3_long$name <- as.numeric(scan_3_long$name)
-scan_avg <- NULL
-scan_avg <- bind_cols(scan_avg, scan_2[, 1:22])
+scan_avg <- bind_cols(NULL, scan_2[, 1:22])
 scan_avg <- bind_cols(scan_avg, (scan_2[, 23:ncol(scan_2)] + scan_3[, 23:ncol(scan_3)]) / 2)
 rm(scan_2, scan_3)
 scan_avg_long <- pivot_longer(scan_avg, cols = `11536`:`3952`, names_to = "name", values_to = "value")
@@ -239,7 +238,7 @@ scan_avg_long$name <- as.numeric(scan_avg_long$name)
 
 
 # Preprocessing Spectra
-Initial preprocessing done with prospectr and a savitzkygolay filter.  might make more sense to preprocess after selecting important variables?  Some functions included to play around with some preprocessing filters and select optimal filters.
+Initial preprocessing done with prospectr and a savitzkygolay filter.  might make more sense to preprocess after selecting important variables?  Some functions included to play around with preprocessing filters and select optimal filters.
 
 ```{r, cache = T}
 spec.fig <- function(mydf, color) { # ggplot function to swap out color
@@ -285,34 +284,58 @@ quickproc <- function(m, p, w){
   temp_proc_long$name <<- as.numeric(as.character(temp_proc_long$name))
 }
 
-quickproc(2,3,15)
+quickproc(1,2,17)
 spec.fig(temp_proc_long,specimen)
 
-sg_plotting(length,2,3,15)
+sg_plotting(length,1,2,17)
 ```
 
 # Variable/Wavelength Selection & PLS
 Using temp_proc df produced from quickproc() function above.  VIP score to select wavelengths that are most informative to model
 ```{r, cache = T}
+# temp_proc df
 test_pls <- pls(temp_proc[, 23:ncol(temp_proc)], temp_proc[, 4],
   scale = FALSE, center = TRUE, info = "Length Prediction Model",
   cv = 1
 )
 plot(test_pls)
+
+# pls w/ VIP > 1.5
 test_vip <- vipscores(test_pls)
 plotVIPScores(test_pls)
-
-test_waves <- names(subset(test_vip[,1], test_vip[,1] > 2))
+test_waves <- names(subset(test_vip[,1], test_vip[,1] > 1.5))
 all_waves <- names(temp_proc[,23:length(temp_proc)])
 bad_waves <- all_waves[!(all_waves %in% test_waves)]
 
-
-test_pls_VIP <- pls(temp_proc[, 23:ncol(temp_proc)], temp_proc[, 4],
+# unprocessed df
+test_unproc_pls <- pls(scan_avg[, 23:ncol(scan_avg)], scan_avg[, 4],
   scale = FALSE, center = TRUE, info = "Length Prediction Model",
-  cv = 1,exclcols = bad_waves
+  cv = 1
 )
-plot(test_pls_VIP)
-plot(test_pls)
+plot(test_unproc_pls)
+
+# test_pls_VIP <- pls(temp_proc[, 23:ncol(temp_proc)], temp_proc[, 4],
+#  scale = FALSE, center = TRUE, info = "Length Prediction Model",
+#  cv = 1,exclcols = bad_waves
+# )
+# plot(test_pls_VIP)
+
+# 90% train, 10% test
+# set.seed(1)
+# idx <- floor(nrow(temp_proc) * 0.9)
+# train_idx <- sample(seq_len(nrow(temp_proc)), size = idx)
+# train <- temp_proc[train_idx, -c(1:3,5:33)] 
+# test <- temp_proc[-train_idx, -c(1:3,5:33)] 
+# ##
+# test_pls_split <- pls(train[,-c(1)], train[,1],
+#   scale = T, center = T,
+#   info = "Length Prediction Model", cv = 1,
+#   x.test = test[,-c(1)], y.test = test[,1]
+# )
+# plot(test_pls_split)
+# plot(test_pls_VIP)
+# plot(test_pls)
+
 ```
 
 # MLR & PCA
