--- a/LPW_FT-NIRS.Rmd
+++ b/LPW_FT-NIRS.Rmd
@@ -1,6 +1,8 @@
 ---
-output: html_document
-editor_options: 
+output:
+  pdf_document: default
+  html_document: default
+editor_options:
   chunk_output_type: inline
 ---
 # LPW
@@ -274,17 +276,17 @@ sg_plotting <- function(color, m, p, w) {
 
 sg_plotting(specimen,2,3,25)
 
-quickproc <- function(m, p, w){
+quickproc <- function(df, m, p, w){
   temp_proc <<- as.data.frame(
-    cbind(scan_avg[, c(1:22)],
-          savitzkyGolay(scan_avg[,23:length(scan_avg)],
+    cbind({{df}}[, c(1:22)],
+          savitzkyGolay({{df}}[,23:length({{df}})],
                         m = m, p = p, w = w)
   ))
   temp_proc_long <<- tidyr::pivot_longer(temp_proc, cols = c(23:length(temp_proc)))
   temp_proc_long$name <<- as.numeric(as.character(temp_proc_long$name))
 }
 
-quickproc(1,2,17)
+quickproc(scan_avg,1,2,17)
 spec.fig(temp_proc_long,specimen)
 
 sg_plotting(length,1,2,17)
@@ -373,56 +375,57 @@ ggplot() + geom_point(aes(x = pcr_pred, y = test[,1])) +
 ```
 # Remove specimens missing age data, pls for age
 
-```{r}
+```{r, cache = T}
+# df with only aged specimens
 age_only <- scan_avg %>% dplyr::filter(is.na(read_age) == FALSE)
 
-test_pls_age <- pls(age_only[, 23:ncol(age_only)], age_only[, 13],
+# generate preprocessed df of ages, temp_proc & temp_proc_long
+quickproc(age_only,1,2,17)
+
+spec.fig(temp_proc_long,specimen)
+
+# test pls, no variable selection
+test_pls_age <- pls(temp_proc[, 23:ncol(temp_proc)], temp_proc[, 13],
   scale = FALSE, center = TRUE, info = "Age Prediction Model",
   cv = 1
 )
 plot(test_pls_age)
 
+# pls with VIP > 0.5
 test_vip_age <- vipscores(test_pls_age)
 plotVIPScores(test_pls_age)
 test_waves <- names(subset(test_vip_age[,1], test_vip_age[,1] > .5))
-all_waves <- names(age_only[,23:length(age_only)])
+all_waves <- names(temp_proc[,23:length(temp_proc)])
 bad_waves <- all_waves[!(all_waves %in% test_waves)]
 
-test_pls_age_VIP <- pls(age_only[, 23:ncol(age_only)], age_only[, 13],
-  scale = FALSE, center = TRUE, info = "Age Prediction Model",
-  cv = 1
-)
-
-# PLS for age with VIP > 0.5
-test_pls_age_VIP <- pls(age_only[, 23:ncol(age_only)], age_only[, 13],
+test_pls_age_VIP <- pls(temp_proc[, 23:ncol(temp_proc)], temp_proc[, 13],
  scale = FALSE, center = TRUE, info = "Age Prediction Model",
- cv = 1,exclcols = bad_waves
+ cv = 1, exclcols = bad_waves
 )
 plot(test_pls_age_VIP)
 
 
 # 90/10 split for PLS, no VIP
 set.seed(1)
-idx <- floor(nrow(age_only) * 0.9)
-train_idx <- sample(seq_len(nrow(age_only)), size = idx)
-train <- age_only[train_idx, -c(1:12,14:33)] 
-test <- age_only[-train_idx, -c(1:12,14:33)] 
+idx <- floor(nrow(temp_proc) * 0.9)
+train_idx <- sample(seq_len(nrow(temp_proc)), size = idx)
+train <- temp_proc[train_idx, -c(1:12,14:22)] 
+test <- temp_proc[-train_idx, -c(1:12,14:22)] 
 
-test_pls_age_split <- pls(train[,-c(1)], train[,1],
+test_pls_age_split <- pls(train[,-1], train[,1],
   scale = T, center = T,
-  info = "Length Prediction Model", cv = 1,
-  x.test = test[,-c(1)], y.test = test[,1]
+  info = "Age Prediction Model", cv = 1,
+  x.test = test[,-1], y.test = test[,1]
 )
 plot(test_pls_age_split)
 
-# 90/10 split for PLS, VIP > 0.5
-test_pls_age_split_VIP <- pls(train[,-c(1)], train[,1],
+
+# 90/10 split for PLS, VIP > 0.5 (not working???)
+test_pls_age_split_VIP <- pls(train[,-1], train[,1],
   scale = T, center = T,
-  info = "Length Prediction Model", cv = 1,
-  x.test = test[,-c(1)], y.test = test[,1],
+  info = "Age Prediction Model", cv = 1,
   exclcols = bad_waves
 )
-plot(test_pls_age_split_VIP)
 
 
 plot(test_pls_age)
@@ -438,16 +441,16 @@ test_pls_age_split_VIP$res$cal$rmse[4]
 
 # PCR for age
 
-```{r}
-pca_age_LPW <- pca(age_only[23:nrow(age_only)], scale = T)
+```{r, cache = T}
+pca_age_LPW <- pca(temp_proc[23:nrow(temp_proc)], scale = T)
 mlr_age_pcs <- pca_age_LPW$calres$scores[,1:20]
-mlr_age_df <- cbind(mlr_age_pcs[,1:10], age_only[,3:13])
+mlr_age_df <- cbind(mlr_age_pcs[,1:10], temp_proc[,3:13])
 
 set.seed(1)
-idx <- floor(nrow(age_only) * 0.9)
-train_idx <- sample(seq_len(nrow(age_only)), size = idx)
-train <- age_only[train_idx, -c(1:12,14:33)] 
-test <- age_only[-train_idx, -c(1:12,14:33)] 
+idx <- floor(nrow(temp_proc) * 0.9)
+train_idx <- sample(seq_len(nrow(temp_proc)), size = idx)
+train <- temp_proc[train_idx, -c(1:12,14:33)] 
+test <- temp_proc[-train_idx, -c(1:12,14:33)] 
 
 library(pls)
 pcr_age_model <- pcr(read_age ~ .,
